--- a/.github/workflows/build-lottie2gif-windows.yml
+++ b/.github/workflows/build-lottie2gif-windows.yml
@@ -10,18 +10,18 @@ jobs:
     steps:
     - uses: actions/checkout@v4
 
-    - name: Install CMake
-      uses: lukka/get-cmake@latest
-
-    - name: Configure
+    - name: Configure (CMake)
+      shell: pwsh
       run: |
-        cmake -S . -B build ^
-          -DTHORVG_LOTTIE_LOADER_SUPPORT=ON ^
-          -DTHORVG_BUILD_SAMPLES=OFF ^
+        cmake -S . -B build `
+          -DTHORVG_LOTTIE_LOADER_SUPPORT=ON `
+          -DTHORVG_BUILD_SAMPLES=OFF `
           -DTHORVG_BUILD_TOOLS=ON
 
     - name: Build
-      run: cmake --build build --config Release
+      shell: pwsh
+      run: |
+        cmake --build build --config Release
 
     - name: Upload lottie2gif.exe
       uses: actions/upload-artifact@v4
