--- a/.github/workflows/build-lottie2gif-windows.yml
+++ b/.github/workflows/build-lottie2gif-windows.yml
@@ -1,4 +1,4 @@
-name: build-lottie2gif
+name: build-thorvg-windows
 
 on:
   workflow_dispatch:
@@ -12,7 +12,7 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      # 2️⃣ 安装 MSYS2 + 必要工具
+      # 2️⃣ Setup MSYS2 + 必要工具
       - name: Setup MSYS2
         uses: msys2/setup-msys2@v2
         with:
@@ -25,41 +25,39 @@ jobs:
             mingw-w64-x86_64-giflib
             coreutils
 
-      # 3️⃣ Meson 配置
-      - name: Configure build (Meson)
+      # 3️⃣ Configure Meson
+      - name: Configure build
         shell: msys2 {0}
         run: |
-          meson setup build -Dtools=lottie2gif --buildtype=release
+          meson setup build \
+            -Dtools=lottie2gif,svg2png \
+            -Dsavers=gif \
+            -Dloaders=lottie,png,jpg,webp \
+            --buildtype=release
 
-      # 4️⃣ 编译
+      # 4️⃣ Build all targets
       - name: Build (Ninja)
         shell: msys2 {0}
         run: |
           ninja -C build
 
-      # 5️⃣ 调试：列出 build 目录（可选）
+      # 5️⃣ Debug: 列出 build 目录内容（可选）
       - name: List build folder
         shell: msys2 {0}
         run: |
           echo "Listing build directory:"
           ls -R build
 
-      # 6️⃣ 找到 tvg-lottie2gif.exe 并复制到 artifact
-      - name: Collect tvg-lottie2gif.exe
+      # 6️⃣ 收集所有 exe 文件
+      - name: Collect all executables
         shell: msys2 {0}
         run: |
-          exe=$(find build -type f -name "tvg-lottie2gif.exe" | head -n 1)
-          if [ -z "$exe" ]; then
-            echo "tvg-lottie2gif.exe not found!"
-            exit 1
-          fi
-          echo "Found: $exe"
           mkdir -p artifact
-          cp "$exe" artifact/
+          find build -maxdepth 3 -type f -name "*.exe" -exec cp {} artifact/ \;
 
       # 7️⃣ 上传 artifact
       - name: Upload artifact
         uses: actions/upload-artifact@v4
         with:
-          name: lottie2gif-windows
-          path: artifact/tvg-lottie2gif.exe
+          name: thorvg-windows-bins
+          path: artifact/
